--- a/Objects/myProject.htm
+++ b/Objects/myProject.htm
@@ -3,7 +3,7 @@
 <title>Static Call Graph - [.\Objects\myProject.axf]</title></head>
 <body><HR>
 <H1>Static Call Graph for image .\Objects\myProject.axf</H1><HR>
-<BR><P>#&#060CALLGRAPH&#062# ARM Linker, 6190004: Last Updated: Sat Oct 28 16:50:30 2023
+<BR><P>#&#060CALLGRAPH&#062# ARM Linker, 6190004: Last Updated: Sat Oct 28 17:10:08 2023
 <BR><P>
 <H3>Maximum Stack Usage =        120 bytes + Unknown(Cycles, Untraceable Function Pointers)</H3><H3>
 Call chain for Maximum Stack Depth:</H3>
@@ -389,7 +389,7 @@ Global Symbols
 <P><STRONG><a name="[13]"></a>UART1_IRQHandler</STRONG> (Thumb, 24 bytes, Stack size 0 bytes, main.o(.text.UART1_IRQHandler))
 <BR>[Address Reference Count : 1]<UL><LI> startup_mkl25z4.o(RESET)
 </UL>
-<P><STRONG><a name="[2a]"></a>UART_led_control</STRONG> (Thumb, 172 bytes, Stack size 0 bytes, main.o(.text.UART_led_control))
+<P><STRONG><a name="[2a]"></a>UART_led_control</STRONG> (Thumb, 180 bytes, Stack size 0 bytes, main.o(.text.UART_led_control))
 <BR><BR>[Stack]<UL><LI>Max Depth = 40<LI>Call Chain = UART_led_control &rArr; osSemaphoreRelease &rArr; osRtxPostProcess
 </UL>
 <BR>[Calls]<UL><LI><a href="#[60]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;rotateRight
@@ -445,7 +445,7 @@ Global Symbols
 <BR>[Called By]<UL><LI><a href="#[26]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;main
 </UL>
 
-<P><STRONG><a name="[26]"></a>main</STRONG> (Thumb, 236 bytes, Stack size 0 bytes, main.o(.text.main))
+<P><STRONG><a name="[26]"></a>main</STRONG> (Thumb, 252 bytes, Stack size 0 bytes, main.o(.text.main))
 <BR><BR>[Stack]<UL><LI>Max Depth = 32<LI>Call Chain = main &rArr; InitUART1 &rArr; __aeabi_uidiv
 </UL>
 <BR>[Calls]<UL><LI><a href="#[6f]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;osKernelStart
@@ -470,13 +470,14 @@ Global Symbols
 <BR><BR>[Called By]<UL><LI><a href="#[2a]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;UART_led_control
 </UL>
 
-<P><STRONG><a name="[2f]"></a>movingBuzzer</STRONG> (Thumb, 408 bytes, Stack size 24 bytes, main.o(.text.movingBuzzer))
-<BR><BR>[Stack]<UL><LI>Max Depth = 64<LI>Call Chain = movingBuzzer &rArr; osSemaphoreRelease &rArr; osRtxPostProcess
+<P><STRONG><a name="[2f]"></a>movingBuzzer</STRONG> (Thumb, 436 bytes, Stack size 32 bytes, main.o(.text.movingBuzzer))
+<BR><BR>[Stack]<UL><LI>Max Depth = 72<LI>Call Chain = movingBuzzer &rArr; osEventFlagsSet &rArr; osRtxPostProcess
 </UL>
 <BR>[Calls]<UL><LI><a href="#[63]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;changeFrequency
 <LI><a href="#[66]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;osDelay
 <LI><a href="#[70]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;osSemaphoreAcquire
-<LI><a href="#[59]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;osSemaphoreRelease
+<LI><a href="#[71]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;osEventFlagsWait
+<LI><a href="#[61]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;osEventFlagsSet
 </UL>
 <BR>[Address Reference Count : 1]<UL><LI> main.o(.text.main)
 </UL>
@@ -525,7 +526,8 @@ Global Symbols
 </UL>
 <BR>[Calls]<UL><LI><a href="#[74]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;osRtxPostProcess
 </UL>
-<BR>[Called By]<UL><LI><a href="#[2a]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;UART_led_control
+<BR>[Called By]<UL><LI><a href="#[2f]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;movingBuzzer
+<LI><a href="#[2a]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;UART_led_control
 </UL>
 
 <P><STRONG><a name="[71]"></a>osEventFlagsWait</STRONG> (Thumb, 68 bytes, Stack size 16 bytes, rtx_evflags.o(.text.osEventFlagsWait))
@@ -533,7 +535,7 @@ Global Symbols
 </UL>
 <BR>[Calls]<UL><LI><a href="#[75]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;EventFlagsCheck
 </UL>
-<BR>[Called By]<UL><LI><a href="#[30]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;stopBuzzer
+<BR>[Called By]<UL><LI><a href="#[2f]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;movingBuzzer
 <LI><a href="#[2e]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;stationRedLED
 <LI><a href="#[2c]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;movingRedLED
 <LI><a href="#[2d]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;stationGreenLED
@@ -841,8 +843,7 @@ Global Symbols
 <BR>[Calls]<UL><LI><a href="#[97]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;SemaphoreTokenIncrement
 <LI><a href="#[74]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;osRtxPostProcess
 </UL>
-<BR>[Called By]<UL><LI><a href="#[2f]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;movingBuzzer
-<LI><a href="#[2a]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;UART_led_control
+<BR>[Called By]<UL><LI><a href="#[2a]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;UART_led_control
 </UL>
 
 <P><STRONG><a name="[48]"></a>osThreadExit</STRONG> (Thumb, 12 bytes, Stack size 0 bytes, rtx_thread.o(.text.osThreadExit))
@@ -912,12 +913,11 @@ Global Symbols
 </UL>
 <BR>[Address Reference Count : 1]<UL><LI> main.o(.text.main)
 </UL>
-<P><STRONG><a name="[30]"></a>stopBuzzer</STRONG> (Thumb, 36 bytes, Stack size 0 bytes, main.o(.text.stopBuzzer))
-<BR><BR>[Stack]<UL><LI>Max Depth = 56<LI>Call Chain = stopBuzzer &rArr; endBuzzer &rArr; osDelay
+<P><STRONG><a name="[30]"></a>stopBuzzer</STRONG> (Thumb, 20 bytes, Stack size 8 bytes, main.o(.text.stopBuzzer))
+<BR><BR>[Stack]<UL><LI>Max Depth = 64<LI>Call Chain = stopBuzzer &rArr; endBuzzer &rArr; osDelay
 </UL>
 <BR>[Calls]<UL><LI><a href="#[65]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;endBuzzer
 <LI><a href="#[70]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;osSemaphoreAcquire
-<LI><a href="#[71]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;osEventFlagsWait
 </UL>
 <BR>[Address Reference Count : 1]<UL><LI> main.o(.text.main)
 </UL>
